# Pong

./: .gitignore  CMakeLists.txt  Makefile  PouzivatelskaPriruckaPong.docx  ProgramatorkaPriruckaKonecny.docx
skuska2/: CMakeCache.txt
src/: client_game.cpp  game.cpp  game.h  server_game.cpp
src/collision/: collision_object.cpp  collision_object.h  dynamic_collision_box.cpp  dynamic_collision_box.h  static_collision_box.cpp  static_collision_box.h
src/network/: client.cpp  client.h  network_object.cpp  network_object.h  server.cpp  server.h
